# data-migration-readiness-review-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  artifacts.md  demo_workflow.md  design_principles.md  example_commands.md  llm_reviewer_notes.md  local_usage.md  migration_pack_format.md  orchestration.md  overview.md  reviewer_workflow.md  roadmap.md  safety_boundaries.md
examples/example_outputs/: contract_review.json  dataset_profiles.json  evidence_coverage_review.json  llm_reviewer_notes.json  mapping_review.json  migration_inventory.json  migration_readiness_trace.json  reconciliation_results.json  review_pack.json  reviewer_summary.md  schema_inventory.json  sensitive_field_review.json  test_evidence_review.json
examples/migration_pack/: manifest.yaml
src/data_migration_readiness_review_agent/: __init__.py  artifact_registry.py  artifacts.py  cli.py  cli_constants.py  contract_review.py  csv_profile.py  evidence_coverage.py  inventory.py  llm_prompt.py  llm_review.py  manifest.py  mapping_review.py  models.py  reconciliation.py  review_pack.py  reviewer_summary.py  (+6 more)
tests/: conftest.py  helpers.py  test_cli.py  test_contract_review.py  test_csv_profile.py  test_documentation.py  test_evidence_coverage.py  test_example_outputs.py  test_inventory.py  test_langgraph_orchestration.py  test_llm_review.py  test_manifest.py  test_mapping_review.py  test_orchestration.py  test_reconciliation.py  test_review_pack.py  test_reviewer_summary.py  test_schema_inventory.py  test_sensitive_fields.py  test_test_evidence.py
(+16 files in other folders)
